--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,133 +1,196 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
     tools:context=".MainActivity">
 
-    <net.skyscanner.backpack.card.BpkCardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:cardBackgroundColor="@color/flight"
-        app:cornerStyle="large"
-        app:elevationLevel="focused"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.053"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.056">
-
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:id="@+id/departureLayout"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/flightLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintWidth_default="wrap"
+            app:layout_constraintHeight_default="wrap">
 
-            <net.skyscanner.backpack.text.BpkText
-                style="@style/bpkTextHeading2"
-                android:layout_width="wrap_content"
+            <FrameLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Flight" />
+                android:layout_margin="16dp"
+                android:background="@drawable/rounded_border"
+                android:padding="8dp">
 
-            <net.skyscanner.backpack.text.BpkText
-                style="@style/bpkTextHeading3"
-                android:layout_width="wrap_content"
+            <net.skyscanner.backpack.card.BpkCardView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="DL 177" />
+                android:clickable="true"
+                android:focusable="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                app:cardBackgroundColor="@color/black"
+                app:cornerStyle="small"
+                app:elevationLevel="focused">
 
-        </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical">
 
-    </net.skyscanner.backpack.card.BpkCardView>
+                    <net.skyscanner.backpack.text.BpkText
+                        style="@style/bpkTextHeading2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Departure"
+                        android:textColor="@color/title" />
 
-    <net.skyscanner.backpack.card.BpkCardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:cardBackgroundColor="@color/times"
-        app:cornerStyle="large"
-        app:elevationLevel="focused"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.057"
+                    <net.skyscanner.backpack.text.BpkText
+                        style="@style/bpkTextHeading3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="CEFT"
+                        android:textColor="@color/title" />
+
+                    <net.skyscanner.backpack.text.BpkText
+                        style="@style/bpkTextHeading3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="7:40 AM"
+                        android:textColor="@color/title" />
+
+                </LinearLayout>
+
+            </net.skyscanner.backpack.card.BpkCardView>
+
+        </FrameLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/flightLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/departureLayout"
+        app:layout_constraintBottom_toTopOf="@+id/arrivalLayout"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.548">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <net.skyscanner.backpack.text.BpkText
-                style="@style/bpkTextHeading2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Arrival" />
-
-            <net.skyscanner.backpack.text.BpkText
-                style="@style/bpkTextHeading3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="SPU" />
-
-            <net.skyscanner.backpack.text.BpkText
-                style="@style/bpkTextHeading3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="10:50 PM" />
-
-        </LinearLayout>
-
-    </net.skyscanner.backpack.card.BpkCardView>
-
-    <net.skyscanner.backpack.card.BpkCardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:cardBackgroundColor="@color/times"
-        app:cornerStyle="large"
-        app:elevationLevel="focused"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.067"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.275">
+        app:layout_constraintWidth_default="wrap"
+        app:layout_constraintHeight_default="wrap">
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:background="@drawable/rounded_border"
+            android:padding="8dp">
 
-            <net.skyscanner.backpack.text.BpkText
-                style="@style/bpkTextHeading2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Departure" />
+        <net.skyscanner.backpack.card.BpkCardView
+            android:layout_width="176dp"
+            android:layout_height="130dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardBackgroundColor="@color/black"
+            app:cornerStyle="small"
+            app:elevationLevel="focused">
 
-            <net.skyscanner.backpack.text.BpkText
-                style="@style/bpkTextHeading3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="SEA" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <net.skyscanner.backpack.text.BpkText
-                style="@style/bpkTextHeading3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="10:45 AM" />
+                <net.skyscanner.backpack.text.BpkText
+                    style="@style/bpkTextHeading2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Flight"
+                    android:textColor="@color/title"/>
 
-        </LinearLayout>
+                <net.skyscanner.backpack.text.BpkText
+                    style="@style/bpkTextHeading3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TK 1724"
+                    android:textColor="@color/title"/>
 
-    </net.skyscanner.backpack.card.BpkCardView>
+            </LinearLayout>
+
+        </net.skyscanner.backpack.card.BpkCardView>
+
+        </FrameLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/arrivalLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/flightLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintWidth_default="wrap"
+        app:layout_constraintHeight_default="wrap">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:background="@drawable/rounded_border"
+            android:padding="8dp">
+
+        <net.skyscanner.backpack.card.BpkCardView
+            android:layout_width="177dp"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardBackgroundColor="@color/black"
+            app:cardStrokeColor="@color/white"
+            app:cardStrokeWidth="1dp"
+            app:cornerStyle="small"
+            app:elevationLevel="focused">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <net.skyscanner.backpack.text.BpkText
+                    style="@style/bpkTextHeading2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Arrival"
+                    android:textColor="@color/title"/>
+
+                <net.skyscanner.backpack.text.BpkText
+                    style="@style/bpkTextHeading3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TRT"
+                    android:textColor="@color/title"/>
+
+                <net.skyscanner.backpack.text.BpkText
+                    style="@style/bpkTextHeading3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="11:40 AM"
+                    android:textColor="@color/title"/>
+
+            </LinearLayout>
+
+        </net.skyscanner.backpack.card.BpkCardView>
+
+        </FrameLayout>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
