--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="background">#f8edff</color>
-    <color name="title">#bfb4ed</color>
-    <color name="flight">#cfc5fc</color>
-    <color name="times">#e7e3fa</color>
+    <color name="background">#000000</color>
+    <color name="title">#ffffff</color>
+    <color name="flight">#000000</color>
+    <color name="times">#000000</color>
 
 </resources>
